libbe(3): Don't promote non-cloned BEs

Most easily reproducible by attempting to activate the currently activated
BE, one would get a "not a cloned filesystem" error instead of success or a
sane message.

PR:		232488
MFC after:	3 days


git-svn-id: svn+ssh://svn.freebsd.org/base/head@339994 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f